fixing width so it does not wrap

--- a/style/rocket_styles.css
+++ b/style/rocket_styles.css
@@ -163,7 +163,7 @@ a.logo {
 /* @group Editing Button */
 
 #ebutton {
-width : 150px;
+width : 160px;
 float : right;
 text-align : right;
 color: #fff;
